# hls_player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  project.json
design/default/styles/: default.xml
design/default/ui/: main.xml  player_common.xml
res/: assets_dark.inc  assets_default.inc
res/assets/: __assets_dark.inc  __assets_default.inc
res/assets/default/inc/images/: mode_0.data  mode_0.res  mode_1.data  mode_1.res  mode_2.data  mode_2.res  pause.data  pause.res  play.data  play.res  sound_minus.data  sound_minus.res  sound_plus.data  sound_plus.res
res/assets/default/inc/styles/: default.data  keyboard.data  main.data  window.data
res/assets/default/inc/ui/: main.data  player_common.data
scripts/: build_linux.sh  run_linux.sh
src/: application_init.c  main.c
src/model/: hls_player.c  hls_player.h
src/view/: video_image.c  video_image.h  video_view.c  video_view.h
src/view_model/: player_view_model.c  player_view_model.h
